kadai add