@@ -1,16 +1,15 @@
 import java.text.DecimalFormat;
 
-public class Wrapper {
+public class WrapperCrazz {
 
     public static void main(String[] args) {
 
         int i = 1;
-        Integer wrapInteger = new Integer(i);
-        System.out.println( i + wrapInteger );
-        
+        Integer wrapInteger = Integer.valueOf(i);
+        System.out.println(i + wrapInteger);
 
         DecimalFormat f1 = new DecimalFormat();
-        
+
     }
-    
+
 }
